--- a/Home.html
+++ b/Home.html
@@ -150,7 +150,7 @@
 				}
 			}
 		};
-		request.open('GET', 'http://ip-api.com/json', true);
+		request.open('GET', 'https://ip-api.com/json', true);
 		request.send();
 	}
 })(); </script>
