Fixed mobile view.

--- a/Blog-Template.html
+++ b/Blog-Template.html
@@ -140,7 +140,7 @@
     </section>
     
     
-    <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-custom-color-1 u-footer" id="sec-2692"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-custom-color-1 u-footer" id="sec-2692"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="telegram" target="_blank" href="#"><span class="u-icon u-icon-circle u-social-facebook u-social-icon u-text-custom-color-2 u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 24 24" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-b9ae"></use></svg><svg class="u-svg-content" viewBox="0 0 24 24" id="svg-b9ae"><path d="m12 24c6.629 0 12-5.371 12-12s-5.371-12-12-12-12 5.371-12 12 5.371 12 12 12zm-6.509-12.26 11.57-4.461c.537-.194 1.006.131.832.943l.001-.001-1.97 9.281c-.146.658-.537.818-1.084.508l-3-2.211-1.447 1.394c-.16.16-.295.295-.605.295l.213-3.053 5.56-5.023c.242-.213-.054-.333-.373-.121l-6.871 4.326-2.962-.924c-.643-.204-.657-.643.136-.953z"></path></svg></span>
           </a>
