--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                 <div class="u-container-layout u-container-layout-1">
                   <h1 class="u-custom-font u-text u-text-body-alt-color u-text-1">MultiBridge<span class="u-text-custom-color-2">.</span>
                   </h1>
-                  <p class="u-text u-text-body-alt-color u-text-2">Multibridge will be the first multi chain bridge that will connect projects on Binance Smart Chain, Ethereum and Polkadot. With future support for upcoming chains like Dfinity.<br>
+                  <p class="u-align-center-xs u-text u-text-body-alt-color u-text-2">Multibridge will be the first multi chain bridge that will connect projects on Binance Smart Chain, Ethereum and Polkadot. With future support for upcoming chains like Dfinity.<br>
                   </p>
-                  <a href="#" class="u-active-custom-color-3 u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-font-raleway u-hover-custom-color-3 u-radius-50 u-text-body-alt-color u-btn-1" title="Coming soon" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">launch app</a>
+                  <a href="#" class="u-active-custom-color-3 u-align-center-xs u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-font-raleway u-hover-custom-color-3 u-radius-50 u-text-body-alt-color u-btn-1" title="Coming soon" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">launch app</a>
                 </div>
               </div>
               <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-size-33 u-image-1" data-image-width="3508" data-image-height="2480" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
@@ -263,11 +263,11 @@ chain there will be a designated support offered.</p>
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-1">
+                <div class="u-container-layout u-valign-bottom-xs u-container-layout-1">
                   <h1 class="u-align-center u-text u-text-custom-color-2 u-text-1">
                     <span class="u-text-white">Token Metrics</span>.
                   </h1>
-                  <img src="images/Pie_chart.png" alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-image u-image-default u-image-1" data-image-width="1600" data-image-height="1131" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+                  <img src="images/Pie_chart.png" alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="1600" data-image-height="1131" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
                 </div>
               </div>
             </div>
@@ -429,8 +429,8 @@ WalletConnect&nbsp;&nbsp;<br>
         </div>
       </div>
     </section>
-    <section class="u-align-left u-clearfix u-custom-color-1 u-section-8" src="" id="carousel_e520">
-      <div class="u-clearfix u-sheet u-sheet-1">
+    <section class="u-align-left u-clearfix u-custom-color-1 u-section-8" src="" id="team">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <h1 class="u-align-center u-text u-text-1">Team<span class="u-text-custom-color-2" style="">.</span>
         </h1>
         <div class="u-expanded-width u-list u-repeater u-list-1">
@@ -463,7 +463,7 @@ WalletConnect&nbsp;&nbsp;<br>
             </div>
           </div>
         </div>
-        <img src="images/OxBull.png" alt="" class="u-image u-image-default u-image-5" data-image-width="1432" data-image-height="1000" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="Down">
+        <img src="images/OxBull.png" alt="" class="u-image u-image-default u-image-5" data-image-width="1432" data-image-height="1000" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
         <p class="u-align-center u-text u-text-10">Incubated by 0xbull<span style="font-weight: 400;" class="u-text-custom-color-2"> .</span>
         </p>
       </div>
@@ -495,7 +495,7 @@ background-color: #232525 !important
 }</style>
     
     
-    <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-custom-color-1 u-footer" id="sec-2692"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-custom-color-1 u-footer" id="sec-2692"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="telegram" target="_blank" href="#"><span class="u-icon u-icon-circle u-social-facebook u-social-icon u-text-custom-color-2 u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 24 24" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-b9ae"></use></svg><svg class="u-svg-content" viewBox="0 0 24 24" id="svg-b9ae"><path d="m12 24c6.629 0 12-5.371 12-12s-5.371-12-12-12-12 5.371-12 12 5.371 12 12 12zm-6.509-12.26 11.57-4.461c.537-.194 1.006.131.832.943l.001-.001-1.97 9.281c-.146.658-.537.818-1.084.508l-3-2.211-1.447 1.394c-.16.16-.295.295-.605.295l.213-3.053 5.56-5.023c.242-.213-.054-.333-.373-.121l-6.871 4.326-2.962-.924c-.643-.204-.657-.643.136-.953z"></path></svg></span>
           </a>
