--- a/Blog-Template.html
+++ b/Blog-Template.html
@@ -61,7 +61,7 @@
 	}
 })();}</script></head>
   <body class="u-body"><header class="u-clearfix u-header u-palette-5-dark-3 u-sticky u-header" id="sec-2485"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="7693" data-image-height="4039">
+        <a href="#" class="u-image u-logo u-image-1" data-image-width="7693" data-image-height="4039" title="home">
           <img src="images/MBRIDGE_LOGO.png" class="u-logo-image u-logo-image-1" data-image-width="122.286">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
