--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	}
 })();}</script></head>
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap u-overlap-contrast"><header class="u-clearfix u-header u-palette-5-dark-3 u-sticky u-header" id="sec-2485"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="7693" data-image-height="4039">
+        <a href="#" class="u-image u-logo u-image-1" data-image-width="7693" data-image-height="4039" title="home">
           <img src="images/MBRIDGE_LOGO.png" class="u-logo-image u-logo-image-1" data-image-width="122.286">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -174,7 +174,7 @@
                       <p class="u-text u-text-2">We have seen that the Ethereum DeFi sector has started to see a rapid growth with Total Value Locked exceeding $40B assets. With the rise of DeFi on Ethereum there were first major flaws spotted - named ethereum gas. Due to high gas fees there has been a huge barrier for new crypto enthusiasts to enter and trade Ethereum tokens. Innovators have seen a solution in the Binance Smart Chain where first big projects like PancaSwap have started to show a competition to the likes of Uniswap. Binance Smart Chain has paved the way for many new projects and we have seen a big increase in BSC projects in the last quarter of 2021. This has lead to many Ethereum projects searching for alternative token on BSC. At the moment a Binance Bridge is the only solution that has proven to be working. As the nature of the solution is centralized there is a long queue in creation and swap of tokens from Ethereum to Binance Smart Chain. With upcoming Polkadot blockchain and Dfinity blockchain we will only see more demand for decentralized bridge solutions.</p>
                     </div>
                   </div>
-                  <img src="images/Table.png" alt="" class="u-align-center u-image u-image-default u-image-1" data-image-width="3508" data-image-height="2480" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+                  <img src="images/Table.png" alt="" class="u-align-center u-image u-image-default u-image-1" data-image-width="3508" data-image-height="2480">
                 </div>
               </div>
             </div>
@@ -204,7 +204,7 @@ wait time. If a project will want to migrate their whole ecosystem to another
 chain there will be a designated support offered.</p>
                     </div>
                   </div>
-                  <img src="images/Ecosystem.png" alt="" class="u-align-center u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1" data-image-width="3508" data-image-height="2480" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+                  <img src="images/Ecosystem.png" alt="" class="u-align-center u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1" data-image-width="3508" data-image-height="2480">
                 </div>
               </div>
             </div>
@@ -217,22 +217,22 @@ chain there will be a designated support offered.</p>
         <h1 class="u-align-center u-text u-text-white u-text-1">Key Features<span class="u-text-custom-color-2">.</span>
         </h1>
         <div class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-list u-repeater u-list-1">
-          <div class="u-align-center u-container-style u-custom-background u-custom-color-1 u-list-item u-repeater-item u-list-item-1" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+          <div class="u-align-center u-container-style u-custom-background u-custom-color-1 u-list-item u-repeater-item u-list-item-1">
             <div class="u-container-layout u-similar-container u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/Bulb.png" alt=""></span>
               <h4 class="u-align-center u-text u-text-2">Multibridge to BSC,DOT and ETH</h4>
             </div>
           </div>
-          <div class="u-align-center u-container-style u-custom-background u-custom-color-1 u-list-item u-repeater-item u-list-item-2" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+          <div class="u-align-center u-container-style u-custom-background u-custom-color-1 u-list-item u-repeater-item u-list-item-2">
             <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="images/NFTs.png" alt=""></span>
               <h4 class="u-align-center u-text u-text-3">NFTs</h4>
             </div>
           </div>
-          <div class="u-align-center u-container-style u-custom-background u-custom-color-1 u-list-item u-repeater-item u-shape-rectangle u-list-item-3" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+          <div class="u-align-center u-container-style u-custom-background u-custom-color-1 u-list-item u-repeater-item u-shape-rectangle u-list-item-3">
             <div class="u-container-layout u-similar-container u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="images/Tractor.png" alt=""></span>
               <h4 class="u-align-center u-text u-text-4">Yield Farming and Gamification</h4>
             </div>
           </div>
-          <div class="u-align-center u-container-style u-custom-color-1 u-list-item u-repeater-item u-shape-rectangle u-list-item-4" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+          <div class="u-align-center u-container-style u-custom-color-1 u-list-item u-repeater-item u-shape-rectangle u-list-item-4">
             <div class="u-container-layout u-similar-container u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="images/Hands.png" alt=""></span>
               <h4 class="u-align-center u-text u-text-5">Staking and Insurance</h4>
             </div>
@@ -249,7 +249,7 @@ chain there will be a designated support offered.</p>
                 <div class="u-container-layout u-container-layout-1">
                   <h1 class="u-align-center u-text u-text-1">Token Ut<span style="font-weight: 700;"></span>ility<span class="u-text-custom-color-2">.</span>
                   </h1>
-                  <img class="u-align-center u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-image u-image-1" src="images/mBRIDGE_Token.png" data-image-width="3508" data-image-height="2480" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+                  <img class="u-align-center u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-image u-image-1" src="images/mBRIDGE_Token.png" data-image-width="3508" data-image-height="2480">
                 </div>
               </div>
             </div>
@@ -267,7 +267,7 @@ chain there will be a designated support offered.</p>
                   <h1 class="u-align-center u-text u-text-custom-color-2 u-text-1">
                     <span class="u-text-white">Token Metrics</span>.
                   </h1>
-                  <img src="images/Pie_chart.png" alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="1600" data-image-height="1131" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+                  <img src="images/Pie_chart.png" alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="1600" data-image-height="1131">
                 </div>
               </div>
             </div>
@@ -284,7 +284,7 @@ chain there will be a designated support offered.</p>
                 <h1 class="u-align-center u-text u-text-custom-color-2 u-text-1">
                   <span class="u-text-white" style="">Roadmap</span>.
                 </h1>
-                <img src="images/Road_map.png" alt="" class="u-align-center u-hidden-xs u-image u-image-default u-image-1" data-image-width="1600" data-image-height="1131" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+                <img src="images/Road_map.png" alt="" class="u-align-center u-hidden-xs u-image u-image-default u-image-1" data-image-width="1600" data-image-height="1131">
               </div>
             </div>
           </div>
@@ -434,28 +434,28 @@ WalletConnect&nbsp;&nbsp;<br>
         <h1 class="u-align-center u-text u-text-1">Team<span class="u-text-custom-color-2" style="">.</span>
         </h1>
         <div class="u-expanded-width u-list u-repeater u-list-1">
-          <div class="u-align-center u-container-style u-list-item u-repeater-item u-list-item-1" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+          <div class="u-align-center u-container-style u-list-item u-repeater-item u-list-item-1">
             <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
               <div alt="" class="u-image u-image-circle u-image-1" src="" data-image-width="640" data-image-height="640"></div>
               <h5 class="u-text u-text-2">Tomito Kotori</h5>
               <p class="u-text u-text-3">CEO and Co-Founder</p>
             </div>
           </div>
-          <div class="u-align-center u-container-style u-list-item u-repeater-item u-list-item-2" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+          <div class="u-align-center u-container-style u-list-item u-repeater-item u-list-item-2">
             <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
               <div alt="" class="u-image u-image-circle u-image-2" src="" data-image-width="640" data-image-height="640"></div>
               <h5 class="u-text u-text-4">Suniku Yi</h5>
               <p class="u-text u-text-5">Co-Founder</p>
             </div>
           </div>
-          <div class="u-align-center u-container-style u-list-item u-repeater-item u-list-item-3" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+          <div class="u-align-center u-container-style u-list-item u-repeater-item u-list-item-3">
             <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
               <div alt="" class="u-image u-image-circle u-image-3" src="" data-image-width="1680" data-image-height="1050"></div>
               <h5 class="u-text u-text-6">0xMEIBO</h5>
               <p class="u-text u-text-7">Senior Blockchain Developer</p>
             </div>
           </div>
-          <div class="u-align-center u-container-style u-list-item u-repeater-item u-list-item-4" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+          <div class="u-align-center u-container-style u-list-item u-repeater-item u-list-item-4">
             <div class="u-container-layout u-similar-container u-valign-top u-container-layout-4">
               <div alt="" class="u-image u-image-circle u-image-4" src="" data-image-width="256" data-image-height="256"></div>
               <h5 class="u-text u-text-8">0xCHENGLEI</h5>
@@ -463,7 +463,7 @@ WalletConnect&nbsp;&nbsp;<br>
             </div>
           </div>
         </div>
-        <img src="images/OxBull.png" alt="" class="u-image u-image-default u-image-5" data-image-width="1432" data-image-height="1000" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+        <img src="images/OxBull.png" alt="" class="u-image u-image-default u-image-5" data-image-width="1432" data-image-height="1000">
         <p class="u-align-center u-text u-text-10">Incubated by 0xbull<span style="font-weight: 400;" class="u-text-custom-color-2"> .</span>
         </p>
       </div>
@@ -472,7 +472,7 @@ WalletConnect&nbsp;&nbsp;<br>
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-1">Stay connected with us<span class="u-text-custom-color-2">!</span>
         </h2>
-        <div class="u-social-icons u-spacing-20 u-social-icons-1" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+        <div class="u-social-icons u-spacing-20 u-social-icons-1">
           <a class="u-social-url" target="_blank" href=""><span class="u-icon u-icon-circle u-social-icon u-social-twitter u-text-custom-color-2 u-icon-1">
           <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-6a52"></use></svg>
           <svg x="0px" y="0px" viewBox="0 0 112 112" id="svg-6a52" class="u-svg-content"><path d="M56.1,0C25.1,0,0,25.1,0,56.1s25.1,56.1,56.1,56.1s56.1-25.1,56.1-56.1S87.1,0,56.1,0z M83.8,47.3 c0,0.6,0,1.2,0,1.7c0,17.7-13.5,38.2-38.2,38.2c-7.6,0-14.6-2.2-20.6-6c1,0.1,2.1,0.2,3.2,0.2c6.3,0,12.1-2.1,16.7-5.7 c-5.9-0.1-10.8-4-12.5-9.3c0.8,0.2,1.7,0.2,2.5,0.2c1.2,0,2.4-0.2,3.5-0.5c-6.1-1.2-10.8-6.7-10.8-13.1c0-0.1,0-0.1,0-0.2 c1.8,1,3.9,1.6,6.1,1.7c-3.6-2.4-6-6.5-6-11.2c0-2.5,0.7-4.8,1.8-6.7c6.6,8.1,16.5,13.5,27.6,14c-0.2-1-0.3-2-0.3-3.1 c0-7.4,6-13.4,13.4-13.4c3.9,0,7.3,1.6,9.8,4.2c3.1-0.6,5.9-1.7,8.5-3.3c-1,3.1-3.1,5.8-5.9,7.4c2.7-0.3,5.3-1,7.7-2.1 C88.7,43,86.4,45.4,83.8,47.3z"></path></svg>
