--- a/Home.html
+++ b/Home.html
@@ -124,6 +124,7 @@
                   <p class="u-align-center-xs u-text u-text-body-alt-color u-text-2">Multibridge will be the first multi chain bridge that will connect projects on Binance Smart Chain, Ethereum and Polkadot. With future support for upcoming chains like Dfinity.<br>
                   </p>
                   <a href="#" class="u-active-custom-color-3 u-align-center-xs u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-font-raleway u-hover-custom-color-3 u-radius-50 u-text-body-alt-color u-btn-1" title="Coming soon" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">launch app</a>
+                  <a href="files/MultiBridge_Deck.pdf" class="u-active-custom-color-3 u-align-center-xs u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-file-link u-font-raleway u-hover-custom-color-3 u-radius-50 u-text-body-alt-color u-btn-2" title="Coming soon" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" target="_blank">PITCH DECK</a>
                 </div>
               </div>
               <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-size-33 u-image-1" data-image-width="3508" data-image-height="2480" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
